Refine monster commands.

--- a/data/label.sty
+++ b/data/label.sty
@@ -206,25 +206,25 @@
 %
 
 % Boss
-\customlabel{boss:Dracula}{德古拉}
-\customlabel{boss:Mummy}{木乃伊}
-
-% Boss (Small)
-\customlabel{boss:Bat}{蝙蝠}
-\customlabel{boss:Ghost}{鬼魂}
-\customlabel{boss:Zombie}{殭屍}
+\customlabel{monster:Dracula}{德古拉}
+\customlabel{monster:Mummy}{木乃伊}
 
 % Monster
-\customlabel{monster:red}{紅色怪物}
-\customlabel{monster:orange}{橙色怪物}
-\customlabel{monster:yellow}{黃色怪物}
-\customlabel{monster:green}{綠色怪物}
-\customlabel{monster:purple}{紫色怪物}
-\customlabel{monster:magenta}{洋紅色怪物}
+\customlabel{monster:Bat}{蝙蝠}
+\customlabel{monster:Ghost}{鬼魂}
+\customlabel{monster:Zombie}{殭屍}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Token
 %
+
+% Token Monster
+\customlabel{token-mon:red}{紅色}
+\customlabel{token-mon:orange}{橙色}
+\customlabel{token-mon:yellow}{黃色}
+\customlabel{token-mon:green}{綠色}
+\customlabel{token-mon:purple}{紫色}
+\customlabel{token-mon:magenta}{洋紅色}
 
 % Token Square
 \customlabel{token-sq:Below Collapsed Room}{崩塌房間下方}
