--- a/src/haunt/001_hero.tex
+++ b/src/haunt/001_hero.tex
@@ -13,35 +13,35 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 將２枚\TokenTri{Knowledge Roll}放到一旁備用。
-  \item 叛徒失去\Omen{Girl}預兆牌以及從她獲得的所有效果。取而代之，他將一枚\Monster{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Boss*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。
+  \item 叛徒失去\Omen{Girl}預兆牌以及從她獲得的所有效果。取而代之，他將一枚\TokenMon{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Monster*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。
   \item 當有探險者進到和\Omen*{Girl}同一房間時，該玩家自動持有\Omen*{Girl}預兆牌。
 \end{itemize}
 
 \HauntSection{對於壞人你知道}
-叛徒致力達成\Boss*{Mummy}與\Omen*{Girl}的婚事。
+叛徒致力達成\Monster*{Mummy}與\Omen*{Girl}的婚事。
 
 \HauntSection{你獲勝於…}
-…在\Boss*{Mummy}娶到\Omen*{Girl}之前，將其驅散回亡者之國時。
+…在\Monster*{Mummy}娶到\Omen*{Girl}之前，將其驅散回亡者之國時。
 
 \vfill\null\pagebreak
 
-\HauntSection{如何驅散\Boss*{Mummy}}
+\HauntSection{如何驅散\Monster*{Mummy}}
 \vspace*{-1em}
 \begin{itemize}
   \item 如果\Omen{Book}還未被探索的話，則下次當有英雄探索到有\OmenSymbol{}符號的新房間時，直接搜尋預兆牌堆並抽將其取出，然後洗勻排堆。
-  \item 你必須說出\Boss*{Mummy}的真名以驅散它。為此，你必需依照順序完成下列步驟。每一位英雄在一回合中只能嘗試其中一個步驟。
+  \item 你必須說出\Monster*{Mummy}的真名以驅散它。為此，你必需依照順序完成下列步驟。每一位英雄在一回合中只能嘗試其中一個步驟。
         \begin{itemize}
-          \item 英雄可以在下列房間內進行知識檢定達 6+ 嘗試找出\Boss*{Mummy}的真名：
+          \item 英雄可以在下列房間內進行知識檢定達 6+ 嘗試找出\Monster*{Mummy}的真名：
                 \begin{itemize}
                   \item 有〈石棺 Sarcophagus〉的房間，研究象形文字；
                   \item \Room{Research Laboratory}，瀏覽考古團隊的筆記；
-                  \item \Room{Library}，研究\Boss*{Mummy}的歷史；
+                  \item \Room{Library}，研究\Monster*{Mummy}的歷史；
                 \end{itemize}
                 如果檢定成功，拿取１枚\TokenTri{Knowledge Roll}。
-          \item 在你找出\Boss*{Mummy}真名之後，持有\Omen*{Book}的英雄可以進行知識檢定達 6+ 嘗試在\Omen*{Book}中找出\Boss*{Mummy}的真名並學會驅散它的咒語。如果檢定成功，拿取１枚\TokenTri{Knowledge Roll}。
-          \item 當你獲得２枚\TokenTri{Knowledge Roll}之後，把\Omen*{Book}帶到\Boss*{Mummy}所在的房間。任何和\Boss*{Mummy}及\Omen*{Book}在同一間房間內的英雄可以進行神志攻擊以擊敗\Boss*{Mummy}，以此完成咒語並永久驅散\Boss*{Mummy}。
+          \item 在你找出\Monster*{Mummy}真名之後，持有\Omen*{Book}的英雄可以進行知識檢定達 6+ 嘗試在\Omen*{Book}中找出\Monster*{Mummy}的真名並學會驅散它的咒語。如果檢定成功，拿取１枚\TokenTri{Knowledge Roll}。
+          \item 當你獲得２枚\TokenTri{Knowledge Roll}之後，把\Omen*{Book}帶到\Monster*{Mummy}所在的房間。任何和\Monster*{Mummy}及\Omen*{Book}在同一間房間內的英雄可以進行神志攻擊以擊敗\Monster*{Mummy}，以此完成咒語並永久驅散\Monster*{Mummy}。
         \end{itemize}
-  \item \Boss*{Mummy}對速度攻擊免疫（例如\Item{Revolver}、\Item{Dynamite}）。
+  \item \Monster*{Mummy}對速度攻擊免疫（例如\Item{Revolver}、\Item{Dynamite}）。
 \end{itemize}
 
 \HauntSection{如果你獲勝…}
