--- a/src/rule/glossary.tex
+++ b/src/rule/glossary.tex
@@ -26,7 +26,7 @@
 \end{itemize}
 
 \paragraph{〈角色 Character〉}
-探險者、怪物、劇本特殊對手（如\Boss*{Dracula}）皆為角色。
+探險者、怪物、劇本特殊對手（如\Monster*{Dracula}）皆為角色。
 
 \paragraph{〈角色卡 Character Card〉}
 遊戲中共有６張角色卡，各代表兩個角色（分別在角色卡的兩面）。每張角色卡皆記載該角色的姓名、肖像、屬性以及其他資訊。
