--- a/include/text.sty
+++ b/include/text.sty
@@ -30,20 +30,23 @@
 
 % Boss
 \makeatletter
-\newcommand*{\Boss}{\@ifstar\@BossStar\@BossNoStar}
-\newcommand{\@BossNoStar}[1]{〈\ref{boss:#1}{}~#1〉}
-\newcommand{\@BossStar}[1]{\ref{boss:#1}{}}
-\newcommand{\BossLarge}[1]{〈\ref{boss:#1}{}~#1〉大型圓形標記}
+\newcommand{\Boss}[1]{〈\ref{monster:#1}{}~#1〉大型怪物標記}
 \makeatother
 
 % Monster
 \makeatletter
 \newcommand*{\Monster}{\@ifstar\@MonsterStar\@MonsterNoStar}
-\newcommand{\@MonsterNoStar}[1]{〈\ref{monster:#1}{}〉標記}
+\newcommand{\@MonsterNoStar}[1]{〈\ref{monster:#1}{}~#1〉}
 \newcommand{\@MonsterStar}[1]{\ref{monster:#1}{}}
 \makeatother
 
 % Token
+\makeatletter
+\newcommand*{\TokenMon}{\@ifstar\@TokenMonStar\@TokenMonNoStar}
+\newcommand{\@TokenMonNoStar}[1]{〈\ref{token-mon:#1}{}〉怪物標記}
+\newcommand{\@TokenMonStar}[1]{\ref{token-mon:#1}{}}
+\makeatother
+
 \makeatletter
 \newcommand*{\TokenSq}{\@ifstar\@TokenSqStar\@TokenSqNoStar}
 \newcommand{\@TokenSqNoStar}[1]{〈\ref{token-sq:#1}{}~#1〉方形標記}
