--- a/src/haunt/001_traitor.tex
+++ b/src/haunt/001_traitor.tex
@@ -14,36 +14,36 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 你的探險者仍在遊戲內，但是變成了叛徒。
-  \item 在你所在的房間放置一枚\BossLarge{Mummy}以及一枚\TokenPenta{Item}（代表石棺 Sarcophagus）。
-  \item 你失去\Omen{Girl}預兆牌以及從她獲得的所有效果，並將此卡放置在一旁。取而代之，將一枚\Monster{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Boss*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。
+  \item 在你所在的房間放置一枚\Boss{Mummy}以及一枚\TokenPenta{Item}（代表石棺 Sarcophagus）。
+  \item 你失去\Omen{Girl}預兆牌以及從她獲得的所有效果，並將此卡放置在一旁。取而代之，將一枚\TokenMon{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Monster*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。
   \item 當有探險者進到和\Omen*{Girl}同一房間時，該玩家自動持有\Omen*{Girl}預兆牌。
-  \item 如果你持有\Omen*{Girl}，若你與\Boss*{Mummy}處於同一房間，可以將\Omen*{Girl}獻給\Boss*{Mummy}，讓\Boss*{Mummy}掌控\Omen*{Girl}。
+  \item 如果你持有\Omen*{Girl}，若你與\Monster*{Mummy}處於同一房間，可以將\Omen*{Girl}獻給\Monster*{Mummy}，讓\Monster*{Mummy}掌控\Omen*{Girl}。
 \end{itemize}
 
 \HauntSection{對於英雄你知道}
-他們正試圖於將\Boss*{Mummy}驅逐回亡者之國。
+他們正試圖於將\Monster*{Mummy}驅逐回亡者之國。
 
 \HauntSection{你獲勝於…}
-…在\Boss*{Mummy}掌控\Omen*{Girl}、持有\Omen{Ring}或是\Omen{Holy Symbol}，並且帶著它們回到有石棺的房間裡。另外你亦獲勝於所有英雄皆死亡的時候。若\Omen*{Ring}與\Omen*{Holy Symbol}皆不在遊戲中，則下次你探索到有\OmenSymbol{}符號的房間時，直接搜尋預兆牌堆並抽將其中之一取出，然後洗勻排堆。
+…在\Monster*{Mummy}掌控\Omen*{Girl}、持有\Omen{Ring}或是\Omen{Holy Symbol}，並且帶著它們回到有石棺的房間裡。另外你亦獲勝於所有英雄皆死亡的時候。若\Omen*{Ring}與\Omen*{Holy Symbol}皆不在遊戲中，則下次你探索到有\OmenSymbol{}符號的房間時，直接搜尋預兆牌堆並抽將其中之一取出，然後洗勻排堆。
 
 \vfill\null\pagebreak
 
-\HauntMobStatusSection{\Boss{Mummy}}
+\HauntMobStatusSection{\Monster{Mummy}}
 \HauntMobStatus{速度３\quad{}力量８\quad{}神志５}
 
-如果\Boss*{Mummy}在\Roll{Movement}時擲出０或是１的話，祂可以使用秘密通道移動至屋內任何一間房間。
+如果\Monster*{Mummy}在\Roll{Movement}時擲出０或是１的話，祂可以使用秘密通道移動至屋內任何一間房間。
 
-\Boss*{Mummy}可以攜帶物品，並且可以掌控\Omen*{Girl}，但是這些物品及\Omen*{Girl}皆不會影響\Boss*{Mummy}的屬性。若你與\Boss*{Mummy}處於同一房間，可以將任何物品及\Omen*{Girl}獻給\Boss*{Mummy}。
+\Monster*{Mummy}可以攜帶物品，並且可以掌控\Omen*{Girl}，但是這些物品及\Omen*{Girl}皆不會影響\Monster*{Mummy}的屬性。若你與\Monster*{Mummy}處於同一房間，可以將任何物品及\Omen*{Girl}獻給\Monster*{Mummy}。
 
-\HauntSection{\Boss*{Mummy}在祂的回合必須…}
-\Boss*{Mummy}必須攻擊（如果可以做到的話）一名同一房間的探險者。
+\HauntSection{\Monster*{Mummy}在祂的回合必須…}
+\Monster*{Mummy}必須攻擊（如果可以做到的話）一名同一房間的探險者。
 
 \HauntSection{特殊攻擊規則}
 \vspace*{-1em}
 \begin{itemize}
-  \item \Boss*{Mummy}以力量進行攻擊但是造成速度傷害，直到其對手速度屬性降至最低值（該次攻擊不會使速度屬性將至骷髏頭標誌）。此後，其對手改成受到力量傷害直到死亡。
-  \item 當\Boss*{Mummy}擊敗一名對手並可造成２點以上的傷害時，祂改為從其對手那邊搶奪一個可交易的物品而不造成傷害。\Boss*{Mummy}可透過此方法取得\Omen*{Girl}的掌控權。
-  \item \Boss*{Mummy}對速度攻擊免疫（例如\Item{Revolver}、\Item{Dynamite}）。
+  \item \Monster*{Mummy}以力量進行攻擊但是造成速度傷害，直到其對手速度屬性降至最低值（該次攻擊不會使速度屬性將至骷髏頭標誌）。此後，其對手改成受到力量傷害直到死亡。
+  \item 當\Monster*{Mummy}擊敗一名對手並可造成２點以上的傷害時，祂改為從其對手那邊搶奪一個可交易的物品而不造成傷害。\Monster*{Mummy}可透過此方法取得\Omen*{Girl}的掌控權。
+  \item \Monster*{Mummy}對速度攻擊免疫（例如\Item{Revolver}、\Item{Dynamite}）。
 \end{itemize}
 
 \HauntSection{如果你獲勝…}
