--- a/src/haunt/002_hero.tex
+++ b/src/haunt/002_hero.tex
@@ -10,44 +10,44 @@
 \end{HauntStory}
 
 \HauntSection{此刻}
-將等同於玩家數量的\TokenTri{Knowledge Roll}、等同於玩家數量的\TokenTri{Sanity Roll}、一枚\TokenPenta{Item}（代表屍骸）、一枚\Monster{purple}（代表\Boss{Ghost}）放置在一旁備用。
+將等同於玩家數量的\TokenTri{Knowledge Roll}、等同於玩家數量的\TokenTri{Sanity Roll}、一枚\TokenPenta{Item}（代表屍骸）、一枚\TokenMon{purple}（代表\Monster{Ghost}）放置在一旁備用。
 
 \HauntSection{對於壞人你知道}
-叛徒正趕著在你們之前召喚\Boss*{Ghost}。
+叛徒正趕著在你們之前召喚\Monster*{Ghost}。
 
 \HauntSection{你獲勝於…}
-…在叛徒掌控\Boss*{Ghost}之後擊敗祂，或在你召喚出\Boss*{Ghost}之後埋葬祂。
+…在叛徒掌控\Monster*{Ghost}之後擊敗祂，或在你召喚出\Monster*{Ghost}之後埋葬祂。
 
-\HauntSection{如何召喚\Boss*{Ghost}}
-你們與叛徒必須比賽誰先召喚\Boss*{Ghost}。你必須先執行降魂儀式以召喚\Boss*{Ghost}：
+\HauntSection{如何召喚\Monster*{Ghost}}
+你們與叛徒必須比賽誰先召喚\Monster*{Ghost}。你必須先執行降魂儀式以召喚\Monster*{Ghost}：
 \begin{itemize}
   \item 英雄可以在\Room{Pentagram Chamber}內進行知識或神志檢定達 5+ 嘗試執行降魂儀式。每個回合僅能進行一種檢定。
   \item 每當檢定成功，（依據該檢定屬性）將一枚\TokenTri{Knowledge Roll}或\TokenTri{Sanity Roll}放進房間內。當英雄方放置了等同於玩家人數一半（向下捨去）的標記，他們便完成降魂儀式。
-  \item 如果英雄方在叛徒之前完成降魂儀式，他們即掌控\Boss*{Ghost}（依照下一節的指示）。如果叛徒成功完成降魂儀式，則會是由他掌控\Boss*{Ghost}。
+  \item 如果英雄方在叛徒之前完成降魂儀式，他們即掌控\Monster*{Ghost}（依照下一節的指示）。如果叛徒成功完成降魂儀式，則會是由他掌控\Monster*{Ghost}。
 \end{itemize}
 
 \vfill\null\pagebreak
 
-\HauntSection{如何你先召喚\Boss*{Ghost}…}
-\Boss*{Ghost}宣布（請大聲說出）：
+\HauntSection{如何你先召喚\Monster*{Ghost}…}
+\Monster*{Ghost}宣布（請大聲說出）：
 \begin{quote}
   『埋葬我的屍骨！』
 \end{quote}
 \vspace*{-1em}
 \begin{itemize}
-  \item 將\Boss*{Ghost}標記放置於降魂儀式成功的房間內，他會待在那邊直到你失去祂的掌控權。
+  \item 將\Monster*{Ghost}標記放置於降魂儀式成功的房間內，他會待在那邊直到你失去祂的掌控權。
   \item 將回合／傷害記錄器設置好並指到１。隨後，每當完成降魂儀式的玩家結束回合時，將記錄器的數值推進到下一個數字。你必須在第５回合（數字指到５）開始前埋葬屍骨。
   \item 每回合一次，你可以在\Room{Attic}、\Room{Bedroom}、\Room{Master Bedroom}內執行知識檢定達 5+ 嘗試尋找屍骨。如果檢定成功，將屍骸標記放置於你的角色卡上。
   \item 將屍骸帶到\Room{Crypt}或\Room{Graveyard}，並執行知識檢定達 5+ 已找到正確的墓碑以埋葬屍骨。
-  \item 當你完成此事，\Boss*{Ghost}將不再可以攻擊。如果你在第５回合開始時仍未成功埋葬屍骨，則叛徒將掌控\Boss*{Ghost}，並依照叛徒手冊的指示控制\Boss*{Ghost}。若此事發生，則埋葬屍骨已不足以安撫\Boss*{Ghost}，你必須消滅祂。
+  \item 當你完成此事，\Monster*{Ghost}將不再可以攻擊。如果你在第５回合開始時仍未成功埋葬屍骨，則叛徒將掌控\Monster*{Ghost}，並依照叛徒手冊的指示控制\Monster*{Ghost}。若此事發生，則埋葬屍骨已不足以安撫\Monster*{Ghost}，你必須消滅祂。
 \end{itemize}
 
 \HauntSection{特殊攻擊規則}
 \vspace*{-1em}
 \begin{itemize}
   \item 在降魂儀式完成前任何人皆不可出手攻擊。
-  \item 當叛徒成功掌控\Boss*{Ghost}，你可以（且只能）對祂進行神志攻擊，但僅限於使用\Omen{Ring}、或是當你與\Boss*{Ghost}同處於\Room{Pentagram Chamber}內時。一次成功的神志攻擊即可消滅\Boss*{Ghost}。
-  \item 若\Boss*{Ghost}對英雄進行攻擊但卻反遭擊敗，祂不會受傷。
+  \item 當叛徒成功掌控\Monster*{Ghost}，你可以（且只能）對祂進行神志攻擊，但僅限於使用\Omen{Ring}、或是當你與\Monster*{Ghost}同處於\Room{Pentagram Chamber}內時。一次成功的神志攻擊即可消滅\Monster*{Ghost}。
+  \item 若\Monster*{Ghost}對英雄進行攻擊但卻反遭擊敗，祂不會受傷。
 \end{itemize}
 
 \HauntSection{如果你獲勝…}
