--- a/src/rule/haunt.tex
+++ b/src/rule/haunt.tex
@@ -85,7 +85,7 @@
 
 \subsection{隱藏叛徒的作祟} \label{ssec:haunts-with-a-hidden-traitor}
 
-少數作祟劇本有\textbf{〈隱藏叛徒 Hidden Traitor〉}，亦即該劇本的叛徒身份為非公開情報。當隱藏叛徒的作祟開始時，找出編號從１到等同於玩家數量的未使用\Monster{red}，面朝下（Ｓ符號朝上）洗勻並分給每一位玩家。抽到１的玩家即為叛徒。在這個情況下，作祟後的第一個回合從作祟揭露者左邊的玩家開始。
+少數作祟劇本有\textbf{〈隱藏叛徒 Hidden Traitor〉}，亦即該劇本的叛徒身份為非公開情報。當隱藏叛徒的作祟開始時，找出編號從１到等同於玩家數量的未使用\TokenMon{red}，面朝下（Ｓ符號朝上）洗勻並分給每一位玩家。抽到１的玩家即為叛徒。在這個情況下，作祟後的第一個回合從作祟揭露者左邊的玩家開始。
 
 除非劇本額外敘述，隱藏叛徒隨時可以公開其身份——將其身份標記翻面。（舉例來說，叛徒可能想要利用他的能力以躲避屋內的陷阱或危險。）
 
@@ -107,7 +107,7 @@
 
 \begin{itemize}
   \item \textbf{每隻怪物必須在下一隻行動前完成移動及所有行動。}
-  \item \textbf{怪物的移動模式不同。}在怪物回合的開始，根據每種怪物的速度擲骰子，擲骰的結果即為這會和怪物可以移動的格數。相同類別且相同速度的怪物（如\Boss*{Bat}或\Boss*{Zombie}），共同擲骰且共用擲骰結果。
+  \item \textbf{怪物的移動模式不同。}在怪物回合的開始，根據每種怪物的速度擲骰子，擲骰的結果即為這會和怪物可以移動的格數。相同類別且相同速度的怪物（如\Monster*{Bat}或\Monster*{Zombie}），共同擲骰且共用擲骰結果。
   \item \textbf{怪物不會被殺。}若怪物受到傷害，牠便被\textbf{〈震懾 Stunned〉}，被震懾的怪物將休息一回。當怪物被震懾時，將怪物的標記翻到背面（Ｓ符號朝上），並於牠的下個回合結束時翻回正面。被震懾的怪物不會妨礙探險者的移動。即使劇本提到了除了震懾以外怪物受傷時的行為，他們依然可以被震懾。
   \item 如同探險者，\textbf{怪物每回合僅能攻擊一次}。許多怪物可以使用力量以外的屬性進行攻擊，但牠們不能進行任何特殊攻擊（詳見\namepageref{ssec:special-attacks}）。
   \item 如同叛徒，\textbf{怪物亦可忽視房間板塊的負面效果}。怪物進入\Room{Coal Chute}時依舊滑落至\Room{Basement Landing}；牠可以自由穿越\Event{Revolving Wall}而無需擲骰。怪物可以自由的爬上\Room{Coal Chute}、\Room{Collapsed Room}及\Room{Gallery}。然而，怪物無法透過房間板塊的效果獲得屬性（如\Room{Larder}及\Room{Gymnasium}）。
