--- a/data/label.sty
+++ b/data/label.sty
@@ -208,10 +208,14 @@
 % Boss
 \customlabel{monster:Dracula}{德古拉}
 \customlabel{monster:Mummy}{木乃伊}
+\customlabel{monster:Witch}{女巫}
 
 % Monster
 \customlabel{monster:Bat}{蝙蝠}
+\customlabel{monster:Cat}{貓}
+\customlabel{monster:Frog}{青蛙}
 \customlabel{monster:Ghost}{鬼魂}
+\customlabel{monster:Mandrake Root}{曼陀羅草根}
 \customlabel{monster:Zombie}{殭屍}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
