--- a/src/haunt/001_hero.tex
+++ b/src/haunt/001_hero.tex
@@ -28,7 +28,7 @@
 \HauntSection{如何驅散\Monster*{Mummy}}
 \vspace*{-1em}
 \begin{itemize}
-  \item 如果\Omen{Book}還未被探索的話，則下次當有英雄探索到有\OmenSymbol{}符號的新房間時，直接搜尋預兆牌堆並抽將其取出，然後洗勻排堆。
+  \item 如果\Omen{Book}還未被探索的話，則下次當有英雄探索到有\OmenSymbol{}符號的新房間時，直接搜尋預兆牌堆並抽將其取出，然後洗勻牌堆。
   \item 你必須說出\Monster*{Mummy}的真名以驅散它。為此，你必需依照順序完成下列步驟。每一位英雄在一回合中只能嘗試其中一個步驟。
         \begin{itemize}
           \item 英雄可以在下列房間內進行知識檢定達 6+ 嘗試找出\Monster*{Mummy}的真名：
