--- a/src/haunt/001_traitor.tex
+++ b/src/haunt/001_traitor.tex
@@ -24,7 +24,7 @@
 他們正試圖於將\Monster*{Mummy}驅逐回亡者之國。
 
 \HauntSection{你獲勝於…}
-…在\Monster*{Mummy}掌控\Omen*{Girl}、持有\Omen{Ring}或是\Omen{Holy Symbol}，並且帶著它們回到有石棺的房間裡。另外你亦獲勝於所有英雄皆死亡的時候。若\Omen*{Ring}與\Omen*{Holy Symbol}皆不在遊戲中，則下次你探索到有\OmenSymbol{}符號的房間時，直接搜尋預兆牌堆並抽將其中之一取出，然後洗勻排堆。
+…在\Monster*{Mummy}掌控\Omen*{Girl}、持有\Omen{Ring}或是\Omen{Holy Symbol}，並且帶著它們回到有石棺的房間裡。另外你亦獲勝於所有英雄皆死亡的時候。若\Omen*{Ring}與\Omen*{Holy Symbol}皆不在遊戲中，則下次你探索到有\OmenSymbol{}符號的房間時，直接搜尋預兆牌堆並抽將其中之一取出，然後洗勻牌堆。
 
 \vfill\null\pagebreak
 
