--- a/src/haunt/002_traitor.tex
+++ b/src/haunt/002_traitor.tex
@@ -21,7 +21,7 @@
 \begin{itemize}
   \item 你的探險者仍在遊戲內，但是變成了叛徒。
   \item 將一枚\TokenTri{Knowledge Roll}、一枚\TokenTri{Sanity Roll}、一枚\TokenMon{purple}（代表\Monster{Ghost}）放置在一旁備用。
-  \item 若\Room{Pentagram Chamber}不在屋內，將其找擺放到地下室，並且距離你五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。然後洗勻排堆。
+  \item 若\Room{Pentagram Chamber}不在屋內，將其找擺放到地下室，並且距離你五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。然後洗勻牌堆。
 \end{itemize}
 
 \HauntSection{對於英雄你知道}
@@ -67,5 +67,5 @@
 
 \HauntSection{如果你獲勝…}
 \begin{HauntStory}
-  現在迷霧從上到下充滿了屋子。你滑過它們，就像在你身邊盤旋的鬼魂一樣安靜。你的心跳減慢且平靜。安靜。現在，有兩個靈魂一起在此地作祟。直到永遠。
+  現在迷霧從上到下充滿了屋子。你就像在身邊盤旋的鬼魂一樣，安靜地滑過它們。你的心跳減慢且平靜。安靜。現在，有兩個靈魂一起在此地作祟。直到永遠。
 \end{HauntStory}
