--- a/src/rule/bww.tex
+++ b/src/rule/bww.tex
@@ -6,14 +6,14 @@
 
 \subsection{新卡牌及板塊}
 
-在遊戲開始前，將擴充的事件卡、道具卡、預兆卡、房間板塊與基礎遊戲的一起洗勻。
+在遊戲開始前，將擴充的事件牌、道具牌、預兆牌、房間板塊與基礎遊戲的一起洗勻。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{術語表更新}
 
 \paragraph{〈同伴 Companion〉}
-\Omen{Cat}、\Omen{Dog}、\Omen{Girl}、\Omen{Madman}——這幾張預兆卡屬於同伴，他們會跟隨照料（擁有）他們的探險者。同伴沒有任何屬性。
+\Omen{Cat}、\Omen{Dog}、\Omen{Girl}、\Omen{Madman}——這幾張預兆牌屬於同伴，他們會跟隨照料（擁有）他們的探險者。同伴沒有任何屬性。
 
 \paragraph{〈室外 Outside〉}
 \Room{Balcony}、\Room{Conservatory}、\Room{Gardens}、\Room{Graveyard}、\Room{Patio}、\Room{Roof Landing}、\Room{Solarium}、\Room{Tower}、\Room{Tree House}、\Room{Widow's Walk}屬於室外。
@@ -61,5 +61,5 @@
 \subsection*{}
 
 \begin{RuleBox}{選用規則：只玩新的作祟劇本}
-  若你在一個基礎房間因一個基礎預兆觸發作祟，則將會是一個基礎作祟劇本。如果你只想玩擴充的作祟劇本，你可以棄掉該張預兆卡改抽下一張，直到找到一個擴充的預兆卡。或是你也可以棄掉該房間板塊改抽下一個，直到找到一個擴充的房間板塊。若所有的預兆卡及房間板塊都已經在遊戲內了，則選擇最晚放入遊戲的擴充預兆卡或房間板塊。
+  若你在一個基礎房間因一個基礎預兆觸發作祟，則將會是一個基礎作祟劇本。如果你只想玩擴充的作祟劇本，你可以棄掉該張預兆牌改抽下一張，直到找到一個擴充的預兆牌。或是你也可以棄掉該房間板塊改抽下一個，直到找到一個擴充的房間板塊。若所有的預兆牌及房間板塊都已經在遊戲內了，則選擇最晚放入遊戲的擴充預兆牌或房間板塊。
 \end{RuleBox}
