--- a/src/rule/glossary.tex
+++ b/src/rule/glossary.tex
@@ -20,9 +20,9 @@
 遊戲中共有三種類型的卡牌：事件、道具、預兆。探險者在探索新房間時有機會抽取卡牌。當你抽到卡牌時，大聲唸出卡牌內容並且依循指示行動。
 
 \begin{itemize}
-  \item \textit{〈事件卡 Event Card〉}：事件卡上有漩渦符號\EventSymbol{}。在執行完卡牌上的指示後，棄掉該牌（除非該牌上有特殊指示或是有持續效果）。
-  \item \textit{〈道具卡 Item Card〉}：道具卡上有牛頭符號\ItemSymbol{}。將該牌面朝上放置在你面前，表示擁有該道具。道具卡皆為物品（p.\pageref{glossary:item}）。詳見\namepageref{ssec:use-item-and-omen-cards}。
-  \item \textit{〈預兆卡 Omen Card〉}：預兆卡上有渡鴉符號\OmenSymbol{}。將該牌面朝上放置在你面前，表示擁有該預兆。你可能需要立即進行些行動。在該回合結束，若作祟尚未發生，你必須執行\Roll{Haunt}。大多數預兆都是物品（p.\pageref{glossary:item}）。
+  \item \textit{〈事件牌 Event Card〉}：事件牌上有漩渦符號\EventSymbol{}。在執行完卡牌上的指示後，棄掉該牌（除非該牌上有特殊指示或是有持續效果）。
+  \item \textit{〈道具牌 Item Card〉}：道具牌上有牛頭符號\ItemSymbol{}。將該牌面朝上放置在你面前，表示擁有該道具。道具牌皆為物品（p.\pageref{glossary:item}）。詳見\namepageref{ssec:use-item-and-omen-cards}。
+  \item \textit{〈預兆牌 Omen Card〉}：預兆牌上有渡鴉符號\OmenSymbol{}。將該牌面朝上放置在你面前，表示擁有該預兆。你可能需要立即進行些行動。在該回合結束，若作祟尚未發生，你必須執行\Roll{Haunt}。大多數預兆都是物品（p.\pageref{glossary:item}）。
 \end{itemize}
 
 \paragraph{〈角色 Character〉}
@@ -32,7 +32,7 @@
 遊戲中共有６張角色卡，各代表兩個角色（分別在角色卡的兩面）。每張角色卡皆記載該角色的姓名、肖像、屬性以及其他資訊。
 
 \paragraph{〈同伴 Companion〉}
-\Omen{Dog}、\Omen{Girl}、\Omen{Madman}——這幾張預兆卡屬於同伴，他們會跟隨照料（擁有）他們的探險者。同伴沒有任何屬性。
+\Omen{Dog}、\Omen{Girl}、\Omen{Madman}——這幾張預兆牌屬於同伴，他們會跟隨照料（擁有）他們的探險者。同伴沒有任何屬性。
 
 \paragraph{〈傷害 Damage〉}
 
@@ -69,7 +69,7 @@
 \paragraph{〈假象 False Feature〉}
 有些時候無法總完美將房門與窗戶對上，這些時候屋內會生成一些『假象』。你無法穿過假門，而假窗亦不算是扇窗。
 
-\paragraph{〈人物 Figure〉}
+\paragraph{〈人物模型 Figure〉}
 每個角色卡對應到一個相同顏色的角色人物。在遊戲中該人物代表對應的探險者。
 
 \paragraph{〈作祟 Haunt〉}
@@ -84,7 +84,7 @@
 在作祟開始前，若你抽到預兆牌，你必須在回合結束時進行\Roll{Haunt}。擲６顆骰子，若擲骰結果小於目前已抽出的預兆牌總數，則作祟開始。
 
 \begin{itemize}
-  \item \textit{〈作祟揭露者 Haunt Revealer〉}：上述擲骰的玩家稱為作祟揭露者。他負責查閱\emph{叛徒手冊}開頭的作祟列表，並確認發生哪個作祟劇本以及誰是叛徒。
+  \item \textit{〈作祟揭露者 Haunt Revealer〉}：上述擲骰的玩家稱為作祟揭露者。他負責查閱\strong{叛徒手冊}開頭的作祟列表，並確認發生哪個作祟劇本以及誰是叛徒。
 \end{itemize}
 
 \paragraph{〈作祟特殊行動 Haunt-Specific Action〉}
@@ -137,7 +137,7 @@
   \item \textit{〈怪物標記 Monster Token〉}：共七個顏色，並有編號以方便區別。特殊的怪物（頭目）用較大的圓形標記表示，並印有牠的名字。
   \item \textit{〈物品標記 Item Token〉}：五角形，亦有編號。
   \item \textit{〈檢定標記 Trait Roll Token〉}：三角形，用以紀錄作祟中特殊檢定次數。
-  \item \textit{〈事件標記 Event Token〉／〈房間標記 Room Token〉}：方形，紀錄卡片或房間的效果，如\Event{Secret Stairs}或\Event{Mystic Slide}。
+  \item \textit{〈事件標記 Event Token〉／〈房間標記 Room Token〉}：方形，紀錄卡牌或房間的效果，如\Event{Secret Stairs}或\Event{Mystic Slide}。
 \end{itemize}
 
 \paragraph{〈屬性 Trait〉}
