--- a/src/rule/haunt.tex
+++ b/src/rule/haunt.tex
@@ -18,11 +18,11 @@
 
 \subsection{揭露作祟} \label{ssec:revealing-the-roll}
 
-在作祟揭露者執行\Roll{Haunt}之後，該玩家需查閱\emph{叛徒手冊}開頭的\textbf{〈作祟列表 Haunt Chart〉}，確認發生哪個作祟劇本——以及誰是\textbf{〈叛徒 Traitor〉}。
+在作祟揭露者執行\Roll{Haunt}之後，該玩家需查閱\strong{叛徒手冊}開頭的\textbf{〈作祟列表 Haunt Chart〉}，確認發生哪個作祟劇本——以及誰是\textbf{〈叛徒 Traitor〉}。
 
 作祟列表的上方表列了所有的預兆牌，左方表列了所有的房間。在上方找到作祟發生時抽取的預兆牌，並在左方找到抽取該牌時作祟揭露者所在的房間。對應的數字即為你接下來要進行的作祟劇本編號。
 
-該列表下方亦列出了每個劇本中哪位玩家將成為\textbf{叛徒}，將\emph{叛徒手冊}交給該玩家。作祟揭露者不一定會是叛徒。
+該列表下方亦列出了每個劇本中哪位玩家將成為\textbf{叛徒}，將\strong{叛徒手冊}交給該玩家。作祟揭露者不一定會是叛徒。
 
 \textbf{特殊情況：}若兩個或以上的玩家滿足叛徒的條件，且其中之一為作祟揭露者，則該玩家即為叛徒。若這些玩家皆非作祟揭露者，則距離作祟揭露者左邊最近的玩家為叛徒。
 
@@ -37,13 +37,13 @@
 在作祟開始前，請依序執行以下步驟：
 
 \begin{itemize}
-  \item 叛徒帶著\emph{叛徒手冊}離開房間，並閱讀（\strong{且只閱讀}）該即將發生的作祟劇本。叛徒亦閱讀\namepageref{ssec:traitors-new-power}與\namepageref{ssec:how-monsters-work}。若該玩家不了寫這些規則，他亦需攜帶這本規則手冊離開房間（或請其他玩家解釋這些規則給他）。
-  \item 其餘玩家成為\textbf{〈英雄 Hero〉}，並一起閱讀\emph{生存指南}中對應的作祟劇本。（英雄們應該要簡短的討論生存策略。）
-  \item 雙方都閱讀完後，請叛徒回到房間，雙方立即進行劇本中\emph{「此刻」}章節所指示的行動。（例如在房間中放置標記或抽取卡牌。）
+  \item 叛徒帶著\strong{叛徒手冊}離開房間，並閱讀（\strong{且只閱讀}）該即將發生的作祟劇本。叛徒亦閱讀\namepageref{ssec:traitors-new-power}與\namepageref{ssec:how-monsters-work}。若該玩家不了寫這些規則，他亦需攜帶這本規則手冊離開房間（或請其他玩家解釋這些規則給他）。
+  \item 其餘玩家成為\textbf{〈英雄 Hero〉}，並一起閱讀\strong{生存指南}中對應的作祟劇本。（英雄們應該要簡短的討論生存策略。）
+  \item 雙方都閱讀完後，請叛徒回到房間，雙方立即進行劇本中\strong{「此刻」}章節所指示的行動。（例如在房間中放置標記或抽取卡牌。）
 \end{itemize}
 
 \begin{RuleBox}{}
-  切記務必不要讓叛徒知道你的目標，除非你確信他已經知道，或是你要進行劇本所指示的事情。有些時候，由於叛徒不知道你的意圖，你將因此握有優勢。你可以重複玩同一個劇本，但是切勿洩漏\emph{生存指南}中內容。
+  切記務必不要讓叛徒知道你的目標，除非你確信他已經知道，或是你要進行劇本所指示的事情。有些時候，由於叛徒不知道你的意圖，你將因此握有優勢。你可以重複玩同一個劇本，但是切勿洩漏\strong{生存指南}中內容。
 \end{RuleBox}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -52,7 +52,7 @@
 
 作祟後的第一個回合從距離叛徒左邊最近的玩家開始。接下來每位英雄進行的回合稱為\textbf{〈英雄回合 Hero Turn〉}。在英雄都執行完他們的回合之後，換叛徒執行他的\textbf{〈叛徒回合 Traitor Turn〉}。在叛徒回合之後，所有怪物被該叛徒控制的怪物共同進行\textbf{〈怪物回合 Monster Turn〉}。（也就是說，叛徒有兩個回合：一個給他自己行動而另一個給怪物行動）。接著第一位玩家繼續執行回合，並重複以上流程直到遊戲結束。
 
-\textbf{英雄與叛徒仍然是探險者。}除了不需要在抽取預兆卡時進行作祟檢定之外，他們依然可以進行所有作祟發生前能做的所有行動。叛徒必須告訴英雄他在他的回合做了哪些事，但無需說明原因，同樣的條件也適用於英雄。
+\textbf{英雄與叛徒仍然是探險者。}除了不需要在抽取預兆牌時進行作祟檢定之外，他們依然可以進行所有作祟發生前能做的所有行動。叛徒必須告訴英雄他在他的回合做了哪些事，但無需說明原因，同樣的條件也適用於英雄。
 
 \textbf{在作祟開始後，探險者就有可能死亡。}當你的探險者的任一屬性降至骷髏頭標誌\SkullSymbol{}時，該探險者就會死亡。在某些劇本當中，英雄的死亡將會使他成為叛徒。有些劇本會要求玩家完成等同於探險者數量的任務，該數量亦包含已死亡的探險者。
 
@@ -73,11 +73,11 @@
 
 \subsection{叛徒的新能力}\label{ssec:traitors-new-power}
 
-當你的探險者成為了叛徒時，若你先前受到的事件卡妨礙（如\Event{Debris}或\Event{Webs}），你立即從該事件掙脫。此外，你還獲得以下能力（除非劇本額外敘述）：
+當你的探險者成為了叛徒時，若你先前受到的事件牌妨礙（如\Event{Debris}或\Event{Webs}），你立即從該事件掙脫。此外，你還獲得以下能力（除非劇本額外敘述）：
 
 \begin{itemize}
   \item \textbf{你可以使用任何房間板塊正面效果且同時忽略任何負面效果。}你可以自由穿越\Event{Revolving Wall}而無需擲骰；可以自由選擇\Room{Mystic Elevator}的目的地；但進入\Room{Coal Chute}時依舊滑落至\Room{Basement Landing}。
-  \item \textbf{你可以選擇不要執行事件卡或是\Omen{Bite}預兆卡的效果。}你必須在閱讀內容後但尚未擲骰或執行任何行動前做此決定。但若你選擇執行該效果，則必須承擔風險。
+  \item \textbf{你可以選擇不要執行事件牌或是\Omen{Bite}預兆牌的效果。}你必須在閱讀內容後但尚未擲骰或執行任何行動前做此決定。但若你選擇執行該效果，則必須承擔風險。
   \item \textbf{在你的回合結束後，你接著進行怪物回合（若怪物存在），並操控怪物移動或攻擊。}在叛徒死亡後，你依然可以操控這些怪物。（在某些劇本中，怪物依然可以在你死亡之後完成你的目標。）
 \end{itemize}
 
@@ -118,5 +118,5 @@
 \end{itemize}
 
 \begin{RuleBox}{如果我死了，我的東西怎麼辦？}
-  當你死亡時，如果你擁有\strong{同伴}，該同伴卡以及標記繼續留在該房間。若任何探險者進入該房間，該同伴自動跟隨該探險者，並且該探險者立即獲得卡上敘述相對應的能力。其他物品在你死亡時自動掉落至地上，並將一枚\TokenPenta{Item Pile}放置在該房間。任何探險者皆可前往該房間撿取物品（及卡片）。
+  當你死亡時，如果你擁有\strong{同伴}，該同伴卡牌以及標記繼續留在該房間。若任何探險者進入該房間，該同伴自動跟隨該探險者，並且該探險者立即獲得牌上敘述相對應的能力。其他物品在你死亡時自動掉落至地上，並將一枚\TokenPenta{Item Pile}放置在該房間。任何探險者皆可前往該房間撿取物品（及卡牌）。
 \end{RuleBox}
