--- a/src/rule/main.tex
+++ b/src/rule/main.tex
@@ -164,7 +164,7 @@
 有些物品會影響你的屬性，若物品給予的屬性值超過該屬性的最高值，多餘的將不會曾將屬性，並自行註記超出了多少級。若之後失去該物品將少扣那麼多級屬性。舉例來說，若一個物品給予你兩級力量，但你僅需再增加一級便達到最高值，則之後失去該物品僅需扣一級力量。
 
 \begin{RuleBox}{物品標記}
-許多作祟劇本會放置一或多個\textbf{〈物品標記 Item Token〉}屋內，並且有特殊規則敘述其用途。除非劇本另外有說明，否則這些物品標記就如同道具卡與預兆牌一樣，皆可被交易、棄置、或搶奪。
+許多作祟劇本會放置一或多個\textbf{〈物品標記 Item Token〉}屋內，並且有特殊規則敘述其用途。除非劇本另外有說明，否則這些物品標記就如同道具牌與預兆牌一樣，皆可被交易、棄置、或搶奪。
 \end{RuleBox}
 
 \textbf{\Usage{Weapon}}：\Item{Axe}、\Item{Blood Dagger}、\Item{Revolver}、\Omen{Spear}、\Item{Sacrificial Dagger}屬於武器。武器僅能用於攻擊、而非防禦（詳見\namepageref{ssec:make-an-attack}）。你每次攻擊僅能使用一把武器，但能夠同時攜帶多把。亦可選擇不使用武器。
