--- a/src/rule/win.tex
+++ b/src/rule/win.tex
@@ -2,8 +2,8 @@
 
 \section{贏得遊戲} \label{sec:win}
 
-\textbf{最新達成作祟目標的一方（叛徒方或英雄方）贏得此場遊戲。}作祟目標寫在雙方劇本中\emph{你獲勝於…}章節中（注意你不一定需要殺掉叛徒或英雄）。
+\textbf{最新達成作祟目標的一方（叛徒方或英雄方）贏得此場遊戲。}作祟目標寫在雙方劇本中\strong{你獲勝於…}章節中（注意你不一定需要殺掉叛徒或英雄）。
 
 英雄方至少需要有一名英雄存活。然而，有些劇本中叛徒就算死亡了也可以獲勝。舉例來說，該玩家所操控的怪物或許可以在沒有叛徒的協助下獲得勝利。
 
-當任一方達成目標時，該方的其中一人立即大聲唸出\emph{如果你獲勝…}章節中的內容給所有人聽。
+當任一方達成目標時，該方的其中一人立即大聲唸出\strong{如果你獲勝…}章節中的內容給所有人聽。
