Rename landing translation.

--- a/src/rule/bww.tex
+++ b/src/rule/bww.tex
@@ -32,7 +32,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{平台}
+\subsection{入口}
 
 \Room{Basement Landing}、\Room{Grand Staircase}／\Room{Foyer}／\Room{Entrance Hall}、\Room{Upper Landing}、\Room{Roof Landing}皆為\Room{Landing}。
 
