--- a/data/label.sty
+++ b/data/label.sty
@@ -7,7 +7,7 @@
 \customlabel{room:Attic}{閣樓}
 \customlabel{room:Balcony}{露台}
 \customlabel{room:Ballroom}{舞廳}
-\customlabel{room:Basement Landing}{地下平台}
+\customlabel{room:Basement Landing}{地下入口}
 \customlabel{room:Bedroom}{臥室}
 \customlabel{room:Bloody Room}{染血房間}
 \customlabel{room:Catacombs}{地下墓穴}
@@ -47,7 +47,7 @@
 \customlabel{room:Storeroom}{儲物室}
 \customlabel{room:Tower}{塔樓}
 \customlabel{room:Underground Lake}{地下湖}
-\customlabel{room:Upper Landing}{樓上平台}
+\customlabel{room:Upper Landing}{樓上入口}
 \customlabel{room:Vault}{金庫}
 \customlabel{room:Wine Cellar}{酒窖}
 
@@ -61,7 +61,7 @@
 \customlabel{room:Menagerie}{獸籠}
 \customlabel{room:Nursery}{育嬰房}
 \customlabel{room:Panic Room}{避難室}
-\customlabel{room:Roof Landing}{頂樓平台}
+\customlabel{room:Roof Landing}{頂樓入口}
 \customlabel{room:Rookery}{鳥巢}
 \customlabel{room:Solarium}{日光浴室}
 \customlabel{room:Spiral Staircase}{旋轉樓梯}
@@ -73,7 +73,7 @@
 \customlabel{room:Sewing Room}{裁縫室}
 
 \customlabel{room:Front Door}{前門}
-\customlabel{room:Landing}{平台}
+\customlabel{room:Landing}{入口}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Card
