--- a/src/haunt/003_traitor.tex
+++ b/src/haunt/003_traitor.tex
@@ -40,9 +40,9 @@
 \HauntSection{\Monster*{Witch}的法術}
 \Monster*{Witch}在每個怪物回合可以施展一次下列其中一道法術。如果你成功從英雄那邊搶回\Omen*{Book}的話，你在你的回合亦可以施展一次下列前兩種法術中的其中一道。
 \begin{itemize}
-  \item \textbf{蛙皮術 Skin of Frog} \Monster*{Witch}可以對同房間內的任何英雄施展此法術。\Monster*{Witch}與該英雄擲神志骰，若\Monster*{Witch}的擲骰結果高於英雄，則該英雄變成\Monster*{Frog}，丟下所持有的所有物品；將英雄的人物模型移出房間並用\Monster*{Frog}標記取代，並將其力量及知識屬性降至最低數值。\Monster*{Frog}不可攻擊、抽牌、或探索新房間。其他不是\Monster*{Frog}的探險者可如同物品般攜帶\Monster*{Frog}（\Monster*{Frog}在被攜帶時無法進行任何行動）。你與\Monster*{Witch}皆不可攻擊\Monster*{Frog}——\Monster*{Witch}希望她的寵物能有份點心吃。
-  \item \textbf{龍息術 Breath of Dragon} \Monster*{Witch}可以對任何在她視野中（或同房間）的探險者施展此法術。龍息術對其造成２顆骰的物理傷害，該傷害無法抵抗或減免。
-  \item \textbf{渡鴉之翼 Wings of Raven} \Monster*{Witch}可以施展此法術並且移動至屋內的任何房間內（選擇一間房間並且將\Monster*{Witch}的標記移至該房內）。如果她跟你在同一間房間，他亦可改為對你施展此法術。
+  \item \textbf{蛙皮術 Skin of Frog}：\Monster*{Witch}可以對同房間內的任何英雄施展此法術。\Monster*{Witch}與該英雄擲神志骰，若\Monster*{Witch}的擲骰結果高於英雄，則該英雄變成\Monster*{Frog}，丟下所持有的所有物品；將英雄的人物模型移出房間並用\Monster*{Frog}標記取代，並將其力量及知識屬性降至最低數值。\Monster*{Frog}不可攻擊、抽牌、或探索新房間。其他不是\Monster*{Frog}的探險者可如同物品般攜帶\Monster*{Frog}（\Monster*{Frog}在被攜帶時無法進行任何行動）。你與\Monster*{Witch}皆不可攻擊\Monster*{Frog}——\Monster*{Witch}希望她的寵物能有份點心吃。
+  \item \textbf{龍息術 Breath of Dragon}：\Monster*{Witch}可以對任何在她視野中（或同房間）的探險者施展此法術。龍息術對其造成２顆骰的物理傷害，該傷害無法抵抗或減免。
+  \item \textbf{渡鴉之翼 Wings of Raven}：\Monster*{Witch}可以施展此法術並且移動至屋內的任何房間內（選擇一間房間並且將\Monster*{Witch}的標記移至該房內）。如果她跟你在同一間房間，她亦可改為對你施展此法術。
 \end{itemize}
 
 \HauntSection{特殊攻擊規則}
