--- a/haunt_hero.tex
+++ b/haunt_hero.tex
@@ -9,6 +9,8 @@
 \pagenumbering{gobble}
 \maketitle
 
+\input{src/haunt/000}
+
 \input{src/haunt/001_hero}
 \input{src/haunt/002_hero}
 \input{src/haunt/003_hero}
