--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -9,6 +9,8 @@
 \pagenumbering{gobble}
 \maketitle
 
+\input{src/haunt/000}
+
 \input{src/haunt/001_traitor}
 \input{src/haunt/002_traitor}
 \input{src/haunt/003_traitor}
