--- a/data/label.sty
+++ b/data/label.sty
@@ -208,6 +208,7 @@
 % Boss
 \customlabel{monster:Dracula}{德古拉}
 \customlabel{monster:Mummy}{木乃伊}
+\customlabel{monster:Spider}{蜘蛛}
 \customlabel{monster:Witch}{女巫}
 
 % Monster
