--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -14,5 +14,6 @@
 \input{src/haunt/001_traitor}
 \input{src/haunt/002_traitor}
 \input{src/haunt/003_traitor}
+\input{src/haunt/004_traitor}
 
 \end{document}
