--- a/src/haunt/000.tex
+++ b/src/haunt/000.tex
@@ -227,7 +227,7 @@
         92 & 無（請參照生存指南）\\
         93 & 最高知識 \\
         94 & \begin{minipage}[t]{15em}有最多可交易或被搶奪的物品（道具及預兆）的探險者\end{minipage} \\
-        95 & 最年長的\textbf{玩家}（注意不是探險者） \\
+        95 & 最年長的玩家（注意不是探險者） \\
 
         96 & 作祟揭露者左邊的玩家 \\
         97 & 隱藏叛徒（請參照生存指南） \\
