--- a/src/haunt/002_hero.tex
+++ b/src/haunt/002_hero.tex
@@ -36,7 +36,7 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 將\Monster*{Ghost}標記放置於降魂儀式成功的房間內，他會待在那邊直到你失去祂的掌控權。
-  \item 將回合／傷害記錄器設置好並指到１。隨後，每當完成降魂儀式的玩家結束回合時，將記錄器的數值推進到下一個數字。你必須在第５回合（數字指到５）開始前埋葬屍骨。
+  \item 將回合／傷害記錄器設置好並指到１。隨後，每當完成降魂儀式的玩家結束回合時，將記錄器推進到下一個數字。你必須在第５回合（數字指到５）開始前埋葬屍骨。
   \item 每回合一次，你可以在\Room{Attic}、\Room{Bedroom}、\Room{Master Bedroom}內執行知識檢定達 5+ 嘗試尋找屍骨。如果檢定成功，將屍骸標記放置於你的角色卡上。
   \item 將屍骸帶到\Room{Crypt}或\Room{Graveyard}，並執行知識檢定達 5+ 已找到正確的墓碑以埋葬屍骨。
   \item 當你完成此事，\Monster*{Ghost}將不再可以攻擊。如果你在第５回合開始時仍未成功埋葬屍骨，則叛徒將掌控\Monster*{Ghost}，並依照叛徒手冊的指示控制\Monster*{Ghost}。若此事發生，則埋葬屍骨已不足以安撫\Monster*{Ghost}，你必須消滅祂。
