--- a/src/rule/main.tex
+++ b/src/rule/main.tex
@@ -101,7 +101,7 @@
 \end{RuleBox}
 
 \begin{RuleBox}{\Room{Junk Room}}
-  若你在離開此房間時失去了速度屬性，且你的新速度使你沒有足夠的移動點數離開此房，你依然可以離開此房，並停留在\Room*{Junk Room}與相鄰的房間內。
+  若你在離開此房間時失去了速度屬性，且你的新速度使你沒有足夠的行動點數離開此房，你依然可以離開此房，並停留在\Room*{Junk Room}與相鄰的房間內。
 \end{RuleBox}
 
 \begin{RuleBox}{\Room{Mystic Elevator}}
