--- a/src/card/bhh/item.tex
+++ b/src/card/bhh/item.tex
@@ -116,9 +116,9 @@
   \begin{CardStory}
     引信尚未點燃…
   \end{CardStory}
-  在你的一次攻擊中，你可以使用\ThisName{}取代攻擊，將\ThisName{}點然並扔進一間相鄰的房間。該房間的所有探險者與怪物，皆須進行速度檢定：
+  在你的一次攻擊中，你可以使用\ThisName{}取代攻擊，將\ThisName{}點燃並扔進一間相鄰的房間。該房間的所有探險者與怪物，皆須進行速度檢定：
   \begin{itemize}
-    \item[5+] 你躲開了炸藥的攻擊。
+    \item[5+] 你躲開了\ThisName{}的攻擊。
     \item[0-4] 受到４點物理傷害。
   \end{itemize}
   使用後將\ThisName{}丟棄。\smallbreak
