--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -84,8 +84,8 @@
     \item[4+] 你可自由戴上或脫下\ThisName{}。
     \item[0-3] 你本回合無法使用\ThisName{}。
   \end{itemize}
-  戴上面具後，立即獲得２級神志，並失去２級知識。\smallbreak
-  脫下面具後，立即失去２級神志，並獲得２級知識。\smallbreak
+  戴上\ThisName{}後，立即獲得２級知識，並失去２級神志。\smallbreak
+  脫下\ThisName{}後，立即失去２級知識，並獲得２級神志。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
 \begin{OmenCard}{bhh}{Medallion}{}
