--- a/src/card/bww/event.tex
+++ b/src/card/bww/event.tex
@@ -9,9 +9,9 @@
     比她頭髮還要細的長針，\\
     幾乎就要刺入你的眼裡…
   \end{CardStory}
-  立即移至任一相鄰的房間。失去１級神志，或是進行力量檢定嘗試反抗：
+  立即移至任一相鄰的房間並且失去１級神志，或是進行力量檢定嘗試反抗：
   \begin{itemize}
-    \item[5+] 獲得１級力量、１級速度、２級神志。
+    \item[5+] 獲得１級力量、１級速度、１級神志。
     \item[3-4] 獲得１級力量和１級速度。
     \item[0-2] 失去１級力量和１級速度。
   \end{itemize}
@@ -149,7 +149,7 @@
   \begin{itemize}
     \item[4+] 移至\Room{Arsenal}，並抽取１張道具牌。（若\Room{Arsenal}尚未探索，將其找出並放進屋內。）
     \item[3] 獲得１級知識。
-    \item[3] 失去１級神志。
+    \item[0-2] 失去１級神志。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
