--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -15,5 +15,6 @@
 \input{src/haunt/002_traitor}
 \input{src/haunt/003_traitor}
 \input{src/haunt/004_traitor}
+\input{src/haunt/005_traitor}
 
 \end{document}
