--- a/src/card/bww/event.tex
+++ b/src/card/bww/event.tex
@@ -97,7 +97,7 @@
   \begin{itemize}
     \item[5-6] 移至任何一間有尚未探索之門的房間，並抽取１張道具牌。
     \item[3-4] 移至任何一間有尚未探索之門的房間。
-    \item[1-2] 你不知為何發生了變化。移至\Room{Entrance Hall}，將你的角色卡翻面，並重置所有數值至起始值。
+    \item[1-2] 你不知為何發生了變化。移至\Room{Entrance Hall}，將你的角色卡翻面，並重置所有數值至初始值。
     \item[0] 移至\Room{Entrance Hall}，並棄掉一張道具牌。
   \end{itemize}
 \end{EventCard}%
