--- a/src/rule/glossary.tex
+++ b/src/rule/glossary.tex
@@ -141,7 +141,7 @@
 \end{itemize}
 
 \paragraph{〈屬性 Trait〉}
-每位探險者都有四個屬性——力量、速度、知識、神志——列於角色卡四邊。每個屬性接用綠色表示其起始值。詳見\namepageref{ssec:traits}。
+每位探險者都有四個屬性——力量、速度、知識、神志——列於角色卡四邊。每個屬性接用綠色表示其初始值。詳見\namepageref{ssec:traits}。
 
 \begin{itemize}
   \item \textit{〈物理屬性 Physical Traits〉}：力量與速度為物理屬性。
