--- a/src/rule/main.tex
+++ b/src/rule/main.tex
@@ -20,7 +20,7 @@
 
 \textbf{〈傷害 Damage〉}：許多卡牌、房間板塊、以及遊戲效果會對你造成傷害。當你受到\textbf{〈物理傷害 Physical Damage〉}時，你可將該傷害自由分配到力量和速度，並對兩個屬性下降總和為該傷害的格數。同樣地，當你受到\textbf{〈精神傷害 Mental Damage〉}時，如同物理傷害的操作，但改為下降知識和神志。
 
-附註：Zoe Ingstrom 的力量由大到小分別為『７、６、４、４、\textcolor{green!50!black}{「３」}、３、２、２、\SkullSymbol{}』，神志為「８、７、６、６、５、\textcolor{green!50!black}{「５」}、４、３、\SkullSymbol{}』，其中「$\bullet$」為起始值。
+附註：Zoe Ingstrom 的力量由大到小分別為『７、６、４、４、\textcolor{green!50!black}{「３」}、３、２、２、\SkullSymbol{}』，神志為「８、７、６、６、５、\textcolor{green!50!black}{「５」}、４、３、\SkullSymbol{}』，其中「$\bullet$」為初始值。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -164,7 +164,7 @@
 有些物品會影響你的屬性，若物品給予的屬性值超過該屬性的最高值，多餘的將不會曾將屬性，並自行註記超出了多少級。若之後失去該物品將少扣那麼多級屬性。舉例來說，若一個物品給予你兩級力量，但你僅需再增加一級便達到最高值，則之後失去該物品僅需扣一級力量。
 
 \begin{RuleBox}{物品標記}
-許多作祟劇本會放置一或多個\textbf{〈物品標記 Item Token〉}屋內，並且有特殊規則敘述其用途。除非劇本另外有說明，否則這些物品標記就如同道具牌與預兆牌一樣，皆可被交易、棄置、或搶奪。
+  許多作祟劇本會放置一或多個\textbf{〈物品標記 Item Token〉}屋內，並且有特殊規則敘述其用途。除非劇本另外有說明，否則這些物品標記就如同道具牌與預兆牌一樣，皆可被交易、棄置、或搶奪。
 \end{RuleBox}
 
 \textbf{\Usage{Weapon}}：\Item{Axe}、\Item{Blood Dagger}、\Item{Revolver}、\Omen{Spear}、\Item{Sacrificial Dagger}屬於武器。武器僅能用於攻擊、而非防禦（詳見\namepageref{ssec:make-an-attack}）。你每次攻擊僅能使用一把武器，但能夠同時攜帶多把。亦可選擇不使用武器。
@@ -222,5 +222,5 @@
 \begin{RuleBox}{戰鬥範例}
   假設你的探險者，Jenny LeClerc，正在攻擊一隻狼人。她的力量為４，故她擲４顆骰攻擊。假設你擲出了５，而叛徒替狼人擲出了８！Jenny因此受到了３點物理傷害。假設你選擇將力量降低２級（至３），並將速度降低１級（依然為４）。Jenny依然活著，但她受傷了！
 
-  附註：Jenny LeClerc 的力量由大到小分別為『８、６、５、４、４、\textcolor{green!50!black}{「４」}、４、３、\SkullSymbol{}』，速度為『８、６、５、４、\textcolor{green!50!black}{「４」}、４、３、２、\SkullSymbol{}』，其中「$\bullet$」為起始值。
+  附註：Jenny LeClerc 的力量由大到小分別為『８、６、５、４、４、\textcolor{green!50!black}{「４」}、４、３、\SkullSymbol{}』，速度為『８、６、５、４、\textcolor{green!50!black}{「４」}、４、３、２、\SkullSymbol{}』，其中「$\bullet$」為初始值。
 \end{RuleBox}
