--- a/data/label.sty
+++ b/data/label.sty
@@ -217,6 +217,8 @@
 \customlabel{monster:Frog}{青蛙}
 \customlabel{monster:Ghost}{鬼魂}
 \customlabel{monster:Mandrake Root}{曼陀羅草根}
+\customlabel{monster:Silver Bullets}{銀子彈}
+\customlabel{monster:Werewolf}{狼人}
 \customlabel{monster:Zombie}{殭屍}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
