--- a/data/label.sty
+++ b/data/label.sty
@@ -212,12 +212,14 @@
 \customlabel{monster:Witch}{女巫}
 
 % Monster
+\customlabel{monster:Alien}{外星人}
 \customlabel{monster:Bat}{蝙蝠}
 \customlabel{monster:Cat}{貓}
 \customlabel{monster:Frog}{青蛙}
 \customlabel{monster:Ghost}{鬼魂}
 \customlabel{monster:Mandrake Root}{曼陀羅草根}
 \customlabel{monster:Silver Bullets}{銀子彈}
+\customlabel{monster:Spaceship}{太空船}
 \customlabel{monster:Werewolf}{狼人}
 \customlabel{monster:Zombie}{殭屍}
 
