--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -16,5 +16,6 @@
 \input{src/haunt/003_traitor}
 \input{src/haunt/004_traitor}
 \input{src/haunt/005_traitor}
+\input{src/haunt/006_traitor}
 
 \end{document}
