--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -265,8 +265,8 @@
 \begin{EventCard}{bhh}{Jonah's Turn}
   \begin{CardStory}
     兩個小男孩在玩陀螺。\\
-    男孩：「約拿，你也想玩呀？」\\
-    約拿：「不，這只有我可以玩！」\\
+    男孩：『約拿，你也想玩呀？』\\
+    約拿：『不，這只有我可以玩！』\\
     語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉…
   \end{CardStory}
   持有\Item{Puzzle Box}的探險者，必須立即將它丟棄（送給約拿玩），並抽取１張道具牌。\smallbreak
@@ -550,7 +550,7 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{The Voice}
   \begin{CardStory}
-    「我在地底下，被埋在地底下…」\\
+    『我在地底下，被埋在地底下…』\\
     微弱的聲音只說出這樣一句，\\
     便不再發聲…
   \end{CardStory}
