--- a/src/haunt/002_hero.tex
+++ b/src/haunt/002_hero.tex
@@ -22,7 +22,7 @@
 你們與叛徒必須比賽誰先召喚\Monster*{Ghost}。你必須先執行降魂儀式以召喚\Monster*{Ghost}：
 \begin{itemize}
   \item 英雄可以在\Room{Pentagram Chamber}內進行知識或神志檢定達 5+ 嘗試執行降魂儀式。每個回合僅能進行一種檢定。
-  \item 每當檢定成功，（依據該檢定屬性）將一枚\TokenTri{Knowledge Roll}或\TokenTri{Sanity Roll}放進房間內。當英雄方放置了等同於玩家人數一半（向下捨去）的標記，他們便完成降魂儀式。
+  \item 每當檢定成功，（依據該檢定屬性）將一枚\TokenTri{Knowledge Roll}或\TokenTri{Sanity Roll}放進房間內。當英雄方放置了等同於玩家人數一半（向下取整）的標記，他們便完成降魂儀式。
   \item 如果英雄方在叛徒之前完成降魂儀式，他們即掌控\Monster*{Ghost}（依照下一節的指示）。如果叛徒成功完成降魂儀式，則會是由他掌控\Monster*{Ghost}。
 \end{itemize}
 
