--- a/src/haunt/005_hero.tex
+++ b/src/haunt/005_hero.tex
@@ -7,10 +7,7 @@
 \end{HauntStory}
 
 \HauntSection{此刻}
-\vspace*{-1em}
-\begin{itemize}
-  \item 將一枚\TokenPenta{Item}（代表\Monster{Silver Bullets}）放置在一旁備用。
-\end{itemize}
+將一枚\TokenPenta{Item}（代表\Monster{Silver Bullets}）放置在一旁備用。
 
 \HauntSection{對於壞人你知道}
 
