--- a/src/rule/intro.tex
+++ b/src/rule/intro.tex
@@ -25,7 +25,7 @@
   \item \textbf{洗牌。}將所有事件牌面朝下洗勻，並放置在一個大家都拿得到的地方。對道具牌、預兆牌也做同樣的事情。
   \item 找到\textbf{\Room{Basement Landing}、\Room{Entrance Hall}／\Room{Foyer}／\Room{Grand Staircase}、\Room{Upper Landing}，}並將他們由左至右擺開，中間相隔一定的距離。
   \item \textbf{將其餘的房間板塊面朝下洗勻並疊成一落，}無需在意背面的圖示。
-  \item \textbf{每位玩家將其探險者人物放置到\Room{Entrance Hall}，}探險者人物與角色卡的顏色相同。
+  \item \textbf{每位玩家將其探險者人物模型放置到\Room{Entrance Hall}，}探險者人物模型與角色卡的顏色相同。
   \item \textbf{將骰子堆在一起，}並放置在一個大家都拿得到的地方。
   \item \textbf{決定起始玩家。}角色卡上有寫該角色的生日，生日最近的探險者為起始玩家，回合向左順時針進行。
 \end{itemize}
