--- a/data/label.sty
+++ b/data/label.sty
@@ -215,11 +215,16 @@
 \customlabel{monster:Alien}{外星人}
 \customlabel{monster:Bat}{蝙蝠}
 \customlabel{monster:Cat}{貓}
+\customlabel{monster:Corpse}{屍骸}
+\customlabel{monster:Creeper}{藤蔓}
 \customlabel{monster:Frog}{青蛙}
 \customlabel{monster:Ghost}{鬼魂}
 \customlabel{monster:Mandrake Root}{曼陀羅草根}
+\customlabel{monster:Plant Spray}{植物噴霧}
+\customlabel{monster:Root}{根部}
 \customlabel{monster:Silver Bullets}{銀子彈}
 \customlabel{monster:Spaceship}{太空船}
+\customlabel{monster:Tip}{尖端}
 \customlabel{monster:Werewolf}{狼人}
 \customlabel{monster:Zombie}{殭屍}
 
