--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -17,5 +17,6 @@
 \input{src/haunt/004_traitor}
 \input{src/haunt/005_traitor}
 \input{src/haunt/006_traitor}
+\input{src/haunt/007_traitor}
 
 \end{document}
