--- a/src/haunt/001_hero.tex
+++ b/src/haunt/001_hero.tex
@@ -1,9 +1,10 @@
 %!TEX root = ../../haunt_hero.tex
 
-\chapter{The Mummy Walks 木乃伊橫行}
+\chapter{木乃伊橫行 The Mummy Walks}
 
 \begin{HauntStory}
   房內塵土飛揚，你心中閃過不祥的陰霾。你聽見其中一個朋友放聲大叫，聲音中充滿了欣喜與恐懼。一段冰冷、消沉的聲音在你心中顫抖：
+
   \begin{quote}
     『我失去我的妻子遠超過你所能理解之時日。縱使淚已成灰，愛仍熾熱如日。今我愛人已為我重生。你必不能使我等分離…若你膽敢阻擾，我必將你靈魂生吞活剝。』
   \end{quote}
