--- a/src/haunt/001_traitor.tex
+++ b/src/haunt/001_traitor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_traitor.tex
 
-\chapter{The Mummy Walks 木乃伊橫行}
+\chapter{木乃伊橫行 The Mummy Walks}
 
 \begin{HauntStory}
   在你面前的牆壁振動並滑開，顯露出一具古代石棺，它彎曲的棺蓋遍佈灰塵與象形文字。象形文字發出柔和的光芒，吸引你靠近。一道刺耳的話語滑進你的心靈，說道：
