--- a/src/haunt/002_hero.tex
+++ b/src/haunt/002_hero.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_hero.tex
 
-\chapter{Séance 降魂儀式}
+\chapter{降魂儀式 Séance}
 
 \begin{HauntStory}
   屋內充滿了令人毛骨悚然的寒氣，迷霧緩慢地從地面盤旋而上。一個聲音於空中響起：
@@ -10,7 +10,7 @@
 \end{HauntStory}
 
 \HauntSection{此刻}
-將等同於玩家數量的\TokenTri{Knowledge Roll}、等同於玩家數量的\TokenTri{Sanity Roll}、一枚\TokenPenta{Item}（代表屍骸）、一枚\TokenMon{purple}（代表\Monster{Ghost}）放置在一旁備用。
+將等同於玩家數量的\TokenTri{Knowledge Roll}、等同於玩家數量的\TokenTri{Sanity Roll}、一枚\TokenPenta{Item}（代表\Monster{Corpse}）、一枚\TokenMon{purple}（代表\Monster{Ghost}）放置在一旁備用。
 
 \HauntSection{對於壞人你知道}
 叛徒正趕著在你們之前召喚\Monster*{Ghost}。
@@ -36,10 +36,10 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 將\Monster*{Ghost}標記放置於降魂儀式成功的房間內，他會待在那邊直到你失去祂的掌控權。
-  \item 將回合／傷害記錄器設置好並指到１。隨後，每當完成降魂儀式的玩家結束回合時，將記錄器推進到下一個數字。你必須在第５回合（數字指到５）開始前埋葬屍骨。
-  \item 每回合一次，你可以在\Room{Attic}、\Room{Bedroom}、\Room{Master Bedroom}內執行知識檢定達 5+ 嘗試尋找屍骨。如果檢定成功，將屍骸標記放置於你的角色卡上。
-  \item 將屍骸帶到\Room{Crypt}或\Room{Graveyard}，並執行知識檢定達 5+ 已找到正確的墓碑以埋葬屍骨。
-  \item 當你完成此事，\Monster*{Ghost}將不再可以攻擊。如果你在第５回合開始時仍未成功埋葬屍骨，則叛徒將掌控\Monster*{Ghost}，並依照叛徒手冊的指示控制\Monster*{Ghost}。若此事發生，則埋葬屍骨已不足以安撫\Monster*{Ghost}，你必須消滅祂。
+  \item 將回合／傷害記錄器設置好並指到１。隨後，每當完成降魂儀式的玩家結束回合時，將記錄器推進到下一個數字。你必須在第５回合（數字指到５）開始前埋葬\Monster*{Corpse}。
+  \item 每回合一次，你可以在\Room{Attic}、\Room{Bedroom}、\Room{Master Bedroom}內執行知識檢定達 5+ 嘗試尋找\Monster*{Corpse}。如果檢定成功，將\Monster*{Corpse}標記放置於你的角色卡上。
+  \item 將屍骸帶到\Room{Crypt}或\Room{Graveyard}，並執行知識檢定達 5+ 已找到正確的墓碑以埋葬\Monster*{Corpse}。
+  \item 當你完成此事，\Monster*{Ghost}將不再可以攻擊。如果你在第５回合開始時仍未成功埋葬\Monster*{Corpse}，則叛徒將掌控\Monster*{Ghost}，並依照叛徒手冊的指示控制\Monster*{Ghost}。若此事發生，則埋葬\Monster*{Corpse}已不足以安撫\Monster*{Ghost}，你必須消滅祂。
 \end{itemize}
 
 \HauntSection{特殊攻擊規則}
