--- a/src/haunt/002_traitor.tex
+++ b/src/haunt/002_traitor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_traitor.tex
 
-\chapter{Séance 降魂儀式}
+\chapter{降魂儀式 Séance}
 
 \begin{HauntStory}
   屋內充滿了令人毛骨悚然的寒氣，迷霧緩慢地從地面盤旋而上。一個聲音於空中響起：
