--- a/src/haunt/003_hero.tex
+++ b/src/haunt/003_hero.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_hero.tex
 
-\chapter{Frog-Leg Stew 蛙腿燉肉}
+\chapter{蛙腿燉肉 Frog-Leg Stew}
 
 \begin{HauntStory}
   刺耳的咯笑聲在屋內迴響。
@@ -30,7 +30,7 @@
 \HauntMobStatusSection{\Monster{Frog}}
 \vspace*{-1em}
 \begin{itemize}
-  \item 當英雄變成\Monster*{Frog}時，丟下所持有的所有物品及同伴卡牌，並將其力量及知識屬性降至最低數值。\Monster*{Frog}不可攻擊、抽牌、或探索新房間。其他不是\Monster*{Frog}的探險者可如同物品般攜帶\Monster*{Frog}（\Monster*{Frog}在被攜帶時無法進行任何行動）。
+  \item 當英雄變成\Monster*{Frog}時，丟下持有的所有物品及同伴卡牌，並將其力量及知識屬性降至最低數值。\Monster*{Frog}不可攻擊、抽牌、或探索新房間。其他不是\Monster*{Frog}的探險者可如同物品般攜帶\Monster*{Frog}（\Monster*{Frog}在被攜帶時無法進行任何行動）。
   \item 如果你持有\Omen{Book}，並且與\Monster*{Frog}處於同一房間中，你可以進行知識檢定達 4+ 嘗試施展法術將\Monster*{Frog}變回人類，此法術亦將該英雄之所有屬性恢復至初始值。
 \end{itemize}
 
