--- a/src/haunt/003_traitor.tex
+++ b/src/haunt/003_traitor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_traitor.tex
 
-\chapter{Frog-Leg Stew 蛙腿燉肉}
+\chapter{蛙腿燉肉 Frog-Leg Stew}
 
 \begin{HauntStory}
   一到聲音從陰影中響起，並迷惑了你：
