--- a/src/haunt/004_hero.tex
+++ b/src/haunt/004_hero.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_hero.tex
 
-\chapter{The Web of Destiny 命運蛛網}
+\chapter{命運蛛網 The Web of Destiny}
 
 \begin{HauntStory}
   這蜘蛛網大到令你的心靈拒絕去看它。現在你被他纏住了，你的臉和身體被壓進它黏黏的絲裡，並為了對抗你的皮膚而漸漸變硬。如果你不快點離開，便將永遠無法逃脫。在你視野的邊緣，你看見一塊影子從天花板脫離…喔不，不是影子…是一隻蜘蛛，滑進了蜘蛛網。牠爬到你身上，然後你的胃感覺像是著了火。向下一看，你看見一根螫針刺入你的腹部。你放身尖叫…但是會有人聽到嗎？
