--- a/src/haunt/004_traitor.tex
+++ b/src/haunt/004_traitor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_traitor.tex
 
-\chapter{The Web of Destiny 命運蛛網}
+\chapter{命運蛛網 The Web of Destiny}
 
 \begin{HauntStory}
   你感受到一個黑暗的存在爬進你顫抖的心靈裡，並且在你的頭顱裡築巢。你依然是你，但也同時是牠——那隻蜘蛛。一頓肥滋滋的人類佳餚正在你的新網子的絲線上蠕動著。你幾乎可以感受到這些人類獵物的滋味，他掙扎著，震動順著蜘蛛絲傳送到到你的蜘蛛腹部。你感受到你的蜘蛛身體將卵注射進尖叫中獵物的腹部中，不久後他就會停止掙扎，而你的孩子們將從他抽搐的屍骸中溢出。但你的本能告訴你，其他人將會阻止你們孩子們的誕生…除非你先阻止他們。
@@ -10,7 +10,7 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 如果本場遊戲有五或六名玩家，則你的探險者仍在遊戲內，但是變成了叛徒。
-  \item 如果本場遊戲只有三或四名玩家，則你的探險者已遭\Monster{Spider}吞噬。丟下所持有的所有物品，並將你的人物模型移出遊戲。
+  \item 如果本場遊戲只有三或四名玩家，則你的探險者已遭\Monster{Spider}吞噬。丟下持有的所有物品，並將你的人物模型移出遊戲。
   \item 將一個\Boss{Spider}放進持有\Omen{Bite}的探險者所在的房間內。
   \item 將回合／傷害記錄器設置好並指到１，你會用它來記錄時間。
 \end{itemize}
