--- a/src/haunt/005_hero.tex
+++ b/src/haunt/005_hero.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_hero.tex
 
-\chapter{I Was a Teenage Lycanthrope 我是少年狼}
+\chapter{我是少年狼 I Was a Teenage Lycanthrope}
 
 \begin{HauntStory}
   一聲尖叫劃破寂靜，聲音越來越大且悽慘，嚇的你都開始想尖叫了。正當你覺得你再也無法忍受時，尖叫聲開始變得顫抖且低沈，直到化為純粹憤怒的嚎叫。你的影子開始發抖，因為你了解到你正沐浴在滿月的月光之下⋯
