--- a/src/haunt/005_traitor.tex
+++ b/src/haunt/005_traitor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_traitor.tex
 
-\chapter{I Was a Teenage Lycanthrope 我是少年狼}
+\chapter{我是少年狼 I Was a Teenage Lycanthrope}
 
 \begin{HauntStory}
   月光灑進房間，撫摸你的皮膚。你蹣跚步向窗戶並望向滿月。你的理性開始尖叫並死去，同時你的身體則因為新生的力量而欣喜地嚎叫⋯
@@ -13,7 +13,7 @@
   \item 等同於玩家數量的\TokenMon{red}放置在一旁備用。
   \item 將一枚\TokenMon{red}放置在你的角色卡上，代表你現在變成了\Monster{Werewolf}。
   \item 將一枚\TokenMon{orange}（代表\Omen{Dog}）放進你所在的房間內。
-  \item 丟下所持有的所有物品及同伴卡牌，並隨之調整你的屬性。
+  \item 丟下持有的所有物品及同伴卡牌，並隨之調整你的屬性。
   \item 將所有低於初始值的屬性重置為初始值。接著提升總和等同於英雄數量的屬性。例如，如果有三位英雄的話，你獲得三點來分配給你想增加的屬性（而不是所有屬性各加三級）。
 \end{itemize}
 
@@ -37,7 +37,7 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 你（\Monster*{Werewolf}）或\Omen*{Dog}擊敗英雄時，該角色如正常般受傷。在接下來的回合開始時，該英雄必須進行神志檢定 4+ 以抵抗詛咒，如果檢定失敗，他變成\Monster*{Werewolf}（將一枚\TokenMon{red}放置在他的角色卡上）且不再是英雄。他必須閱讀\strong{叛徒手冊}並立即執行\strong{此刻}章節的內容。
-  \item 除非被\strong{生存指南}提到的特殊物品攻擊，\Monster*{Werewolf}的任何屬性皆不會降至骷髏頭標誌。任何其他來源的傷害皆砍半（向上取整）。
+  \item 除非被\strong{生存指南}中提到的特殊物品攻擊，\Monster*{Werewolf}的任何屬性皆不會降至骷髏頭標誌。任何其他來源的傷害皆砍半（向上取整）。
   \item \Monster*{Werewolf}和\Omen*{Dog}皆無法攜帶任何物品及使用\Room{Mystic Elevator}。
   \item 在你獲勝時，若其他\Monster*{Werewolf}有成功殺掉英雄的話，操控該\Monster*{Werewolf}的玩家亦同時獲勝。
 \end{itemize}
