--- a/src/haunt/006_hero.tex
+++ b/src/haunt/006_hero.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_hero.tex
 
-\chapter{The Floating Eye 漂浮之眼}
+\chapter{漂浮之眼 The Floating Eye}
 
 \begin{HauntStory}
   你不確定你所聽到的究竟是太過尖銳的哀鳴聲、亦或是太過低沈的敲打聲。或許兩者都是。冰冷的藍色光芒閃爍著，一次，又一次。某人尖叫到：
@@ -13,7 +13,6 @@
 將等同於玩家數量的\TokenTri{Might Roll}放置在一旁備用。
 
 \HauntSection{對於壞人你知道}
-
 \Monster{Alien}可以使用心靈控制能力來操控英雄們，他們可以一次對所有在同房間的英雄使用，所以請盡可能地散開來。
 
 \HauntSection{你獲勝於…}
@@ -34,5 +33,5 @@
 
 \HauntSection{如果你獲勝…}
 \begin{HauntStory}
-  因為你那稱之為「朋友」之人的幫助下，那些外星生物幾乎要逮到了你。就算你現在蹲在灌木叢中，你仍然可以看到那些眼睛持續在搜尋你，不斷地搜尋。你能感受到他們在呼喚你。有那麼一瞬間，你的身體不禁轉頭面向屋子。下一瞬間，你再度轉身逃跑，跌跌撞撞地步向馬路及安全。
+  因為你那稱之為「朋友」之人的幫助下，那些外星生物幾乎要逮到了你。就算你現在蹲在灌木叢中，你仍然可以看到那些眼睛持續在搜尋你，不斷地搜尋。你能感受到他們在呼喚你。那一瞬間，你的身體不禁轉頭面向屋子。下一瞬間，你再度轉身逃跑，跌跌撞撞地步向馬路及安全。
 \end{HauntStory}
