--- a/src/haunt/006_traitor.tex
+++ b/src/haunt/006_traitor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../haunt_traitor.tex
 
-\chapter{The Floating Eye 漂浮之眼}
+\chapter{漂浮之眼 The Floating Eye}
 
 \begin{HauntStory}
   你的主人終於到來。你跪在地上，一顆巨大漂浮的眼睛從太空船上降下來，懸浮在你的上方。是時候了，該讓你的朋友們了解真相，並向他們的新領主俯首稱臣。
@@ -11,7 +11,7 @@
 \begin{itemize}
   \item 如果只有三或四名玩家，準備一枚\TokenMon{orange}（代表\Monster{Alien}）；如果有五或六名玩家，則準備兩枚。將這些標記放進作祟發生的房間裡。
   \item 將一枚\TokenPenta{Item}（代表\Monster{Spaceship}）放進作祟發生的房間裡。
-  \item 將你的人物模型放置在\Monster*{Spaceship}上。你的探險者及所持有的所有物品皆已經離開遊戲，等待太空船出發。
+  \item 將你的人物模型放置在\Monster*{Spaceship}上。你的探險者及持有的所有物品皆已經離開遊戲，等待太空船出發。
 \end{itemize}
 
 \HauntSection{對於英雄你知道}
