--- a/src/card/bww/item.tex
+++ b/src/card/bww/item.tex
@@ -51,7 +51,7 @@
 \linebreak[0]%
 \begin{ItemCard}{bww}{Chalk}{}
   \begin{CardStory}
-    由骨灰和鐵塊製作的簡單畫筆。
+    由骨灰和蠟製作的簡單畫筆。
   \end{CardStory}
   你可以使用知識取代力量進行防禦。\smallbreak
 \end{ItemCard}%
