--- a/src/haunt/006_traitor.tex
+++ b/src/haunt/006_traitor.tex
@@ -28,7 +28,7 @@
 \HauntSection{特殊攻擊規則}
 \vspace*{-1em}
 \begin{itemize}
-  \item 除了進行力量攻擊以外，\Monster*{Alien}可以同時對所有在同房間的英雄使用神志攻擊以施展心靈控制。每一個攻擊皆分開處理（擲骰）。在此特殊攻擊下，如果英雄擊敗\Monster*{Alien}，則沒有人會受傷；如果\Monster*{Alien}擊敗英雄，該英雄不會受傷，但改為被\Monster*{Alien}控制。
+  \item 除了進行力量攻擊以外，\Monster*{Alien}可以同時對所有在同房間的英雄使用神志攻擊以施展心靈控制。每一個攻擊皆分開處理。在此特殊攻擊下，如果英雄擊敗\Monster*{Alien}，則沒有人會受傷；如果\Monster*{Alien}擊敗英雄，該英雄不會受傷，但改為被\Monster*{Alien}控制。
   \item 當英雄被\Monster*{Alien}控制時，在他的回合中，你必須將他往\Monster*{Spaceship}移動。該英雄在在移動時無需為房間的效果做檢定或受傷。該英雄亦無法進行攻擊或任何其他行動。在該英雄進入\Monster*{Spaceship}所在的房間的下一個回合開始時，他將登上\Monster*{Spaceship}並離開遊戲。
   \item 英雄們知道某種秘密方法能將彼此從\Monster*{Alien}的心靈控制中解放出來。\Monster*{Alien}對每名英雄只能控制一次，當英雄被解放之後，他將永久免疫\Monster*{Alien}的心靈控制。
   \item \Monster*{Alien}對速度攻擊免疫（例如\Item{Revolver}及\Item{Dynamite}等）。
@@ -37,5 +37,5 @@
 
 \HauntSection{如果你獲勝…}
 \begin{HauntStory}
-  你的主人對你送給他們的禮物很滿意。你的朋友將成為異種生物學實驗中擔任最優秀的實驗對象。此外，理所當然地，主人們承諾讓你保留那漂浮之眼作為紀念品。
+  你的主人對你送給他們的禮物很滿意。你的朋友將在異種生物學實驗中擔任最優秀的實驗對象。此外，理所當然地，主人們承諾讓你保留那漂浮之眼作為紀念品。
 \end{HauntStory}
